<resources>
    <string name="app_name">App Portfolio</string>

    <string name="app_catalog">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_build_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz_reader">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
</resources>
