<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#80BFFF"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/app_catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="36dp" >
            <Button
                android:id="@+id/btn_spotify"
                style="@style/DefaultButton"
                android:text="@string/btn_spotify"
                android:layout_centerHorizontal="true" />
            <Button
                android:id="@+id/btn_scores"
                style="@style/DefaultButton"
                android:text="@string/btn_scores"
                android:layout_below="@+id/btn_spotify" />
            <Button
                android:id="@+id/btn_library"
                style="@style/DefaultButton"
                android:text="@string/btn_library"
                android:layout_below="@+id/btn_scores" />
            <Button
                android:id="@+id/btn_build_bigger"
                style="@style/DefaultButton"
                android:text="@string/btn_build_bigger"
                android:layout_below="@+id/btn_library" />
            <Button
                android:id="@+id/btn_xyz_reader"
                style="@style/DefaultButton"
                android:layout_width="@dimen/app_listing_button_horizontal"
                android:text="@string/btn_xyz_reader"
                android:layout_below="@+id/btn_build_bigger" />
            <Button
                android:id="@+id/btn_capstone"
                style="@style/CapstoneButton"
                android:text="@string/btn_capstone"
                android:layout_below="@+id/btn_xyz_reader" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
